# java-afl

./: .gitignore  .travis-ci.sh  .travis-setup-linux.sh  .travis-setup-osx.sh  .travis.yml  BUILD.bazel  CMakeLists.txt  JavaAfl.c  JavaAfl.java  JavaAflInject.java  JavaAflInstrument.java  README.md  TestDeferred.java  TestForking.java  TestNull.java  TestPersistent.java  TestUtils.java  WORKSPACE  build.sh  java-afl-cmin  java-afl-fuzz  java-afl-showmap  java-afl-tmin  test-fuzz.sh  test.sh
docs/: design-decisions.md
javafl/: CustomInit.java  JavaAfl.java  JavaAflInject.java  JavaAflInstrument.java  JavaAflRun.java  fuzz.java  run.java
test/: Crashing.java  Deferred.java  Forking.java  NoAttribute.java  Null.java  Persistent.java  Plain.java  RawAllLoop.java  Utils.java
